# NMEA-parser

./: CMakeLists.txt  LICENSE  NMEASentenceStructure.txt  NMEAStructureMessage.txt  README.md  main.cpp  vcpkg.json
data/: nmea_logs.txt
include/: HelperFunctions.h  NMEADefinitions.h  NMEAExporter.h  NMEAParser.h  NMEAValidator.h
src/: HelperFunctions.cpp  NMEAExporter.cpp  NMEAParser.cpp  NMEAValidator.cpp  main.cpp
